Fix controls looking blurry on macOS

--- a/styles/controls.less
+++ b/styles/controls.less
@@ -249,7 +249,7 @@ a:hover {
 }
 
 .toolbar-window-controls button {
-	background-size: 12px 51px;
+	background-size: auto;
 	border-radius: 100px;
 	filter: grayscale(100%);
 	.close {
